<resources>
    <string name="app_name">Calculator</string>
    <string name="title_name">Calculator by Clyde</string>
    <string name="sample_input">1+1</string>
    <string name="sample_output">2</string>

    <string name="backspace_description">Backspace</string>

    <!--Label-->
    <string name="AC">AC</string>
    <string name="Percent">%</string>
    <string name="Divide">÷</string>
    <string name="Multiply">×</string>
    <string name="Subtract">-</string>
    <string name="Add">+</string>
    <string name="Equals">=</string>
    <string name="Period">.</string>
    <string name="Zero">0</string>
    <string name="DoubleZero">00</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="Six">6</string>
    <string name="Five">5</string>
    <string name="Four">4</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>
    <string name="calculator_logo">Calculator Logo</string>


</resources>